Fix long field name getting cutout too short in field shortcode popup

--- a/resources/scss/admin/components/list/_code-list.scss
+++ b/resources/scss/admin/components/list/_code-list.scss
@@ -167,7 +167,7 @@
 				margin: 0;
 
 				&:first-child {
-					max-width: 130px;
+					max-width: 250px;
 				}
 
 				&:last-child {
